# heat-transfer-mcp

./: .gitignore  .mcp.json  AI_AGENT_PROMPT.md  LICENSE  README.md  SETUP.md  push_to_github.bat  push_to_github.py  push_to_github.sh  pyproject.toml  requirements.txt  server-sse.py  server.py  setup.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml  validate-tools.yml
docs/: HEAT_EXCHANGER_REFACTORING_PLAN.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_ENHANCED.md  TOOL_PARAMETER_ANALYSIS.md
examples/: basic_usage.py  wastewater_applications.py
tests/: test_core_calculations.py  test_double_pipe_heat_exchanger.py  test_plate_heat_exchanger.py  test_shell_tube_heat_exchanger.py  test_tools.py  test_unit_conversion.py  test_verification_phase4.py
tools/: __init__.py  ambient_conditions.py  buried_object_heat_loss.py  calculate_pressure_drop.py  convection_coefficient.py  estimate_hx_physical_dims.py  extreme_conditions.py  fluid_properties.py  ground_heat_loss.py  heat_duty.py  heat_exchanger.py  heat_exchanger_design.py  hx_shell_side_h_kern.py  material_properties.py  overall_heat_transfer.py  parameter_optimization.py  pipe_heat_management.py  plate_heat_exchanger_sizing.py  size_double_pipe_heat_exchanger.py  size_heat_exchanger_area.py  size_shell_tube_heat_exchanger.py  solar_radiation.py  surface_heat_transfer.py  tank_heat_loss.py
utils/: __init__.py  constants.py  helpers.py  hx_common.py  import_helpers.py  unit_aware_decorator.py  unit_converter.py  validation.py  wastewater_data.py  weather_service.py
